--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <li>13. контекстная <a href="https://moodle.kubsu.ru/my/">ссылка</a> в слове </li>
                 <li>14. <a href="https://www.kubsu.ru/index.php#region-sidebar-second">Ссылка на фрагмент страницы стороннего сайта</a></li>
                 <li>15. ссылки из прямоугольных и круглых областей картинки(ниже)</li>
-                <li>16. <li>16. <a href="#">Пустой href </a></li>
-                <li>17. <li>17. <a href="#">Ссылка без href</a></li>
+                <li>16. <a href="#">Пустой href </a></li>
+                <li>17. <a href="#">Ссылка без href</a></li>
                 <li>18. <a href="https://www.kubsu.ru/ru/taxonomy/term/12" rel="nofollow">ссылку, по которой запрещен переход поисковикам</a></li>  
                 <li>19. <a href="https://www.kubsu.ru/ru/timetable" rel="noindex">запрещенную для индексации поисковиками</a></li>
                 <li>20.
@@ -103,5 +103,6 @@
     
 </body>
 </html>
+
 
 
