--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <area shape="rect" coords="0,0,100,100" href="https://dzen.ru/" alt="dzen" title="Прямоугольная область">
                     <area shape="circle" coords="150,150,50" href="https://www.kubsu.ru/index.php" alt="kubsu" title="Круглая область">
                 </map>
-                <img id="kartinka" src="https://www.rosphoto.com/images/u/articles/1510/7_5.jpg" alt="Изображение с якорем" width="300" height="300">
+                <img id="kartinka" src="s1-jaime-lannister-was-such-an-enjoyable-asshole-v0-jv9gsccmrdyd1.jpg" alt="Изображение с якорем" width="300" height="300">
             </div>
 
   <form id="contact-form" action="https://httpbin.org/post" method="post" enctype="application/x-www-form-urlencoded" autocomplete="on">
@@ -103,6 +103,7 @@
     
 </body>
 </html>
+
 
 
 
